Added multiple headers, a form, and buttons to the website

--- a/index.html
+++ b/index.html
@@ -9,6 +9,29 @@
 </head>
 <body>
     <h1>Chrismess</h1>
+    <h1 class="header2">Xtern 2018</h1>
+
+    <button onclick="changeHeader()">Change First Header</button><br>
+    <button onclick="changeHeader2()">Change Second Header</button><br>
+    <button onclick="addHeader()">Add Header</button><br>
+
+    <form>
+        Change header to:<br>
+        <input type="text" name="newHeader"><br>
+    </form>
+
+      <!--
+
+        <h1>I <3 JavaScript</h1>
+ 
+        <p>Welcome to my page!</p>
+        
+        <p class="delight">
+        I'm delighted that you're here.
+        </p>
+        
+        <button>Say yeah</button>
+      -->
  
     <script src="index.js"></script>
 </body>
