--- a/index.html
+++ b/index.html
@@ -8,31 +8,24 @@
     <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
 </head>
 <body>
-    <h1>Chrismess</h1>
+    <center>
+    <h1 class="header1">Chrismess</h1>
     <h1 class="header2">Xtern 2018</h1>
+    <h1 class="header3">drazo</h1>
 
+    <hr>
     <button onclick="changeHeader()">Change First Header</button><br>
-    <button onclick="changeHeader2()">Change Second Header</button><br>
+    <button onclick="changeSecondHeader()">Change Second Header</button><br>
     <button onclick="addHeader()">Add Header</button><br>
 
-    <form>
+    <hr>
+    <form class="headerForm"> <!-- onsubmit="formHeader()"> -->
         Change header to:<br>
         <input type="text" name="newHeader"><br>
+        <input type="submit" value="Change"><br>
     </form>
 
-      <!--
-
-        <h1>I <3 JavaScript</h1>
- 
-        <p>Welcome to my page!</p>
-        
-        <p class="delight">
-        I'm delighted that you're here.
-        </p>
-        
-        <button>Say yeah</button>
-      -->
- 
+    </center>
     <script src="index.js"></script>
 </body>
 </html>
