removed unnecessary "add header" button

--- a/index.html
+++ b/index.html
@@ -13,15 +13,13 @@
     <h1 class="header2">Xtern 2018</h1>
     <h1 class="header3">drazo</h1>
 
-    <hr>
     <button onclick="changeHeader()">Change First Header</button><br>
     <button onclick="changeSecondHeader()">Change Second Header</button><br>
-    <button onclick="addHeader()">Add Header</button><br>
 
     <hr>
-    <form class="headerForm"> <!-- onsubmit="formHeader()"> -->
+    <form class="headerForm">
         Change header to:<br>
-        <input type="text" name="newHeader"><br>
+        <input type="text" name="headerText"><br>
         <input type="submit" value="Change"><br>
     </form>
 
