Form now submits when enter is refreshed

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <button type='button' onclick="changeSecondHeader()">Change Second Header</button><br>
 
     <hr>
-    <form class="headerForm">
+    <form class="headerForm", id="headerForm" onsubmit="return false">
         Change header to:<br>
-        <input type="text" name="headerText", id="headerText"><br>
-        <input type="button" onclick="changeHeader(document.getElementById('headerText').value)" value="Change">
+        <input type="text" name="headerText", id="headerText" onkeydown = "if (event.keyCode == 13){document.getElementById('formButton').click()}"><br>
+        <input type="button" id="formButton" onclick="changeHeader(document.getElementById('headerText').value)" value="Change">
     </form>
 
     </center>
