--- a/index.html
+++ b/index.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Chrismess - A whole mess o' Chrisses</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="index.css"/>
 </head>
 <body>
-    <center>
+<center>
     <h1 class="header1">Chrismess</h1>
     <h1 class="header2">Xtern 2018</h1>
     <h1 class="header3">drazo</h1>
 
-    <button type='button' onclick="changeHeader()">Change First Header</button><br>
-    <button type='button' onclick="changeSecondHeader()">Change Second Header</button><br>
+    <button type='button' onclick="changeHeader()">Change First Header</button>
+    <br>
+    <button type='button' onclick="changeSecondHeader()">Change Second Header</button>
+    <br>
 
     <hr>
-    <form class="headerForm", id="headerForm" onsubmit="return false">
+    <form class="headerForm" , id="headerForm" onsubmit="return false">
         Change header to:<br>
-        <input type="text" name="headerText", id="headerText" onkeydown = "if (event.keyCode == 13){document.getElementById('formButton').click()}"><br>
-        <input type="button" id="formButton" onclick="changeHeader(document.getElementById('headerText').value)" value="Change">
+        <input type="text" name="headerText" , id="headerText"
+               onkeydown="if (event.keyCode == 13){document.getElementById('formButton').click()}"><br>
+        <input type="button" id="formButton" onclick="changeHeader(document.getElementById('headerText').value)"
+               value="Change">
     </form>
 
-    </center>
-    <script src="index.js"></script>
+</center>
+<script src="index.js"></script>
 </body>
 </html>
