--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <hr>
     <form class="headerForm" , id="headerForm" onsubmit="return false">
         Change header to:<br>
-        <input type="text" name="headerText" , id="headerText"
+        <input type="text" name="headerText" id="headerText"
                onkeydown="if (event.keyCode == 13){document.getElementById('formButton').click()}"><br>
         <input type="button" id="formButton" onclick="changeHeader(document.getElementById('headerText').value)"
                value="Change">
