Fixed two formatting errors

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <br>
 
     <hr>
-    <form class="headerForm" , id="headerForm" onsubmit="return false">
+    <form class="headerForm" id="headerForm" onsubmit="return false">
         Change header to:<br>
         <input type="text" name="headerText" id="headerText"
                onkeydown="if (event.keyCode == 13){document.getElementById('formButton').click()}"><br>
