Instructions and preparation for Day 2 homework

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
                value="Change">
     </form>
 
+    <ul id="flicks">
+        <!-- day 2 of homework-->
+    </ul>
+
 </center>
 <script src="index.js"></script>
 </body>
