--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
 
     <hr>
     <form class="headerForm" id="headerForm" onsubmit="return false">
-        Change header to:<br>
-        <input type="text" name="headerText" id="headerText"
-               onkeydown="if (event.keyCode == 13){document.getElementById('formButton').click()}"><br>
-        <input type="button" id="formButton" onclick="changeHeader(document.getElementById('headerText').value)"
-               value="Change">
+        <br>
+        <input type="text" name="headerText" id="headerText" onkeydown="if (event.keyCode == 13){document.getElementById('formButton').click()}" placeholder="Change Header">
+        <input type="button" id="formButton" onclick="changeHeader(document.getElementById('headerText').value)" value="Change">
+        <br>
+        <input type="text" name="form2" id="form2" placeholder="Create List">
+        <input type="button" id="form2button" onclick="" value="Create">
     </form>
 
     <ul id="flicks">
