--- a/index.html
+++ b/index.html
@@ -21,11 +21,10 @@
     <hr>
     <form class="headerForm" id="headerForm" onsubmit="return false">
         <br>
-        <input type="text" name="headerText" id="headerText" onkeydown="if (event.keyCode == 13){document.getElementById('formButton').click()}" placeholder="Change Header">
-        <input type="button" id="formButton" onclick="changeHeader(document.getElementById('headerText').value)" value="Change">
+        <input type="text" name="form1" id="form1" onkeydown="if (event.keyCode == 13){document.getElementById('formButton').click()}" placeholder="Movie Title">
         <br>
-        <input type="text" name="form2" id="form2" placeholder="Create List">
-        <input type="button" id="form2button" onclick="" value="Create">
+        <input type="text" name="form2" id="form2" placeholder="Year"><br>
+        <input type="button" id="formButton" onclick="changeHeader(document.getElementById('headerText').value)" value="Add to List">
     </form>
 
     <ul id="flicks">
