Use eventListener instead of embedded JS in HTML

--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
     <br>
 
     <hr>
-    <form class="headerForm" id="headerForm" onsubmit="return false">
+    <form class="movieForm" id="movieForm" onsubmit="return false">
         <br>
-        <input type="text" name="form1" id="form1" onkeydown="if (event.keyCode == 13){document.getElementById('formButton').click()}" placeholder="Movie Title">
+        <input type="text" name="form1" id="form1" placeholder="Movie Title" autofocus>
         <br>
-        <input type="text" name="form2" id="form2" placeholder="Year"><br>
-        <input type="button" id="formButton" onclick="changeHeader(document.getElementById('headerText').value)" value="Add to List">
+        <input type="text" name="form2" id="form2" onkeydown="if (event.keyCode == 13){document.getElementById('formButton').click()}" placeholder="Rating (out of 10)"><br>
+        <input type="button" id="formButton" value="Add to List">
     </form>
 
-    <ul id="flicks">
+    <ul id="movieList">
         <!-- day 2 of homework-->
     </ul>
 
