--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <input type="text" name="form1" id="form1" placeholder="Movie Title" autofocus><br>
         <input type="text" name="form2" id="form2" onkeydown="if (event.keyCode == 13){document.getElementById('formButton').click()}" placeholder="Release Year">
         <br>
-        <input type="button" id="formButton" onclick="addToList(document.getElementById('form2').value)" value="Add to List">
+        <input type="button" id="formButton" onclick="addToList()" value="Add to List">
     </form>
 
     <ul id="movieList">
