--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 <body>
 <center>
     <h1 class="header1">Chrismess</h1>
-    <h1 class="header2">Xtern 2018</h1>
-    <h1 class="header3">drazo</h1>
+    <h2 class="header2">A Whole Mess 'o Chrisses</h2>
 
     <button type='button' onclick="changeHeader()">Change First Header</button>
     <br>
