--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <body>
 <center>
     <h1 class="header1">Chrismess</h1>
-    <h2 class="header2">A Whole Mess 'o Chrisses</h2>
+    <h1 class="header2">A Whole Mess 'o Chrisses</h1>
 
+    <!-- Homework 1 -->
     <button type='button' onclick="changeHeader()">Change First Header</button>
     <br>
     <button type='button' onclick="changeSecondHeader()">Change Second Header</button>
@@ -27,10 +28,11 @@
         <input type="button" id="formButton" onclick="addToList()" value="Add to List">
     </form>
 
-    <ul id="movieList">
-        <!-- day 2 of homework-->
-    </ul>
+    <!-- Homework 2 -->
+    <ul id="movieList"></ul>
 
+    <!-- Homework 3 -->
+    
 </center>
 <script src="index.js"></script>
 </body>
